--- a/controller_main_synchronous/platformio.ini
+++ b/controller_main_synchronous/platformio.ini
@@ -8,11 +8,33 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
+[platformio]
+env_default = teensy31
+
+[common]
+build_flags =
+   -D VERSION=1.2.0
+lib_deps_builtin =
+lib_deps_external =
+    CircularBuffer
+    DigitalIO
+    Board Identify
+
+
 [env:uno]
 platform = atmelavr
 board = uno
 framework = arduino
-
 lib_deps=
-  Timer
-  CircularBuffer
+  ${common.lib_deps_builtin}
+  ${common.lib_deps_external}
+
+[env:teensy31]
+platform = teensy
+board = teensy31
+framework = arduino
+lib_compat_mode = 2
+lib_ldf_mode = chain+
+lib_deps =
+   ${common.lib_deps_builtin}
+   ${common.lib_deps_external}
