--- a/TonePuff/platformio.ini
+++ b/TonePuff/platformio.ini
@@ -8,7 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:uno]
-platform = atmelavr
-board = uno
+[env:teensy31]
+platform = teensy
+board = teensy31
 framework = arduino
+lib_deps = DigitalIO
